[hotfix] rollback awsClient regionList